chore: finish generated configuration
